service discovery with Eureka (Server & Client)

--- a/shopping-app/pom.xml
+++ b/shopping-app/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -9,7 +8,6 @@
     <relativePath/>
     <!-- lookup parent from repository -->
   </parent>
-
   <groupId>com.artiprogram</groupId>
   <artifactId>shopping-app</artifactId>
   <version>0.0.1</version>
@@ -17,18 +15,17 @@
   <!--^(\s)*$\n regex for empty lines-->
   <packaging>pom</packaging>
   <name>shopping-app</name>
-
   <modules>
     <module>order-service</module>
     <module>inventory-service</module>
     <module>product-service</module>
     <module>discovery-server</module>
   </modules>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <spring-cloud.version>2022.0.3</spring-cloud.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -36,6 +33,14 @@
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
         <version>1.18.3</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+       <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
