--- a/shopping-app/discovery-server/pom.xml
+++ b/shopping-app/discovery-server/pom.xml
@@ -19,5 +19,10 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+    </dependency>
+  </dependencies>
 </project>
