--- a/shopping-app/.vscode/settings.json
+++ b/shopping-app/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "maven.view": "flat",
     "java.configuration.updateBuildConfiguration": "automatic",
-    "java.compile.nullAnalysis.mode": "disabled"
+    "java.compile.nullAnalysis.mode": "disabled",
+    "java.dependency.packagePresentation": "hierarchical",
+    "java.dependency.syncWithFolderExplorer": true,
+    "java.project.explorer.showNonJavaResources": true
 }
