--- a/shopping-app/pom.xml
+++ b/shopping-app/pom.xml
@@ -44,6 +44,14 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+      <!-- <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-tracing-bom</artifactId>
+        <version>1.1.5</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency> -->
     </dependencies>
   </dependencyManagement>
   <build>
